# deep_learning_lungs_segmentation

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  trained_model_on_showcase_data.py  trained_model_on_your_data.py
src/model/: unet3d.py
src/utils/: compute_prediction.py
